Estruturando o menu do Projeto

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,19 @@
 <div class="footer">
-  <div class="footer-icons">
-    <a href="">
-      <img src="/src/assets/img/instagram.png" alt="instagram icon">
+  <div class="redes">
+    <a href="https://www.instagram.com/victor_carreras_dev/" target="_blaank">
+      <img src="assets/img/instagram.png" alt="Meu Instagram">
     </a>
-    <a href="">
-      <img src="/src/assets/img/github.png" alt="github icon">
+    <a href="https://github.com/carrerasvictor" target="_blaank">
+      <img src="assets/img/github.png" alt="Meu Github">
     </a>
-    <a href="">
-      <img src="/src/assets/img/linkedin.png" alt="linkedin icon">
+    <a href="https://www.linkedin.com/in/vctorcarreras/" target="_blaank">
+      <img src="assets/img/linkedin.png" alt="Meu Linkedin">
     </a>
   </div>
-  <div class="footer-rights">
+    <div class="direitos">
+      <p>
+        © Todos os direitos reservados
+      </p>
+    </div>
 
-  </div>
 </div>
