--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,8 +1,6 @@
 .header {
   text-decoration: none;
-  background-color: black;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
@@ -16,6 +14,9 @@
   line-height: 26px;
   padding-left: 50px;
   display: flex;
+}
+.header-title>a:hover {
+  color: #b7b7b7;
 }
 .header-menu {
   display: flex;
