--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,20 @@
-<p>menu works!</p>
+<app-header></app-header>
+<link href="https://fonts.googleapis.com/css2?family=News+Cycle&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+<body class="menu-1">
+  <div class="menu">
+    <div class="img">
+      	<img class="img" src="/assets/img//50cfcb0d35e0908ccfd21c3dc2ebb265.jpg" alt="Imagem do menu">
+    </div>
+    <div class="texto">
+      	<p>Olá! Me chamo Victor Carreras,
+          sou um desenvolvedor front-end.</p>
+          <br>
+          <p>
+            Um programador entusiasmado e apaixonado, sempre com atenção aos detalhes e foco para produzir um trabalho de qualidade.
+          </p>
+    </div>
+  </div>
+</body>
+<app-footer class="footer">
+
+</app-footer>
