termiinando menu e iniciando parte de sklls do projeto

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,6 +14,6 @@
     <a class="nav" [routerLink]="['/sobre']">Sobre</a>
     <a class="nav" [routerLink]="['/projetos']">Projetos</a>
     <a class="nav" [routerLink]="['/contato']">Contato</a>
-    <a class="nav-a" href="/assets/img/Currículo (Community).jpg" download="curriculum" >Download CV</a>
+    <a class="nav-a" href="/assets/img/Currículo (Community).pdf" download="curriculum" >Download CV</a>
   </div>
 </div>
