--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -6,12 +6,14 @@
       	<img class="img" src="/assets/img//50cfcb0d35e0908ccfd21c3dc2ebb265.jpg" alt="Imagem do menu">
     </div>
     <div class="texto">
+      <img class="img-2" src="/assets/img/coding.png" alt="">
       	<p>Olá! Me chamo Victor Carreras,
           sou um desenvolvedor front-end.</p>
           <br>
           <p>
             Um programador entusiasmado e apaixonado, sempre com atenção aos detalhes e foco para produzir um trabalho de qualidade.
           </p>
+
     </div>
   </div>
 </body>
