--- a/src/app/shared/skills/skills.component.html
+++ b/src/app/shared/skills/skills.component.html
@@ -1,4 +1,15 @@
-<p>skills works!</p>
-<app-header></app-header>
+<!-- <div class="skills">
+  <div>
+    <img class="img" src="/assets/img/css-3.png" alt="">
+  </div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"  ></div>
+  </div>
+</div> -->
 
-<app-footer></app-footer>
+<div class="header-skills">
+  <div>
+    <img class="img" src="/assets/img/watercolor-stains-abstract-background_23-2149107181.webp" alt="">
+  </div>
+</div>
+
